// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportBrowser3 renders a loading widget when no cycle is selected 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <div
      className="btn-group pull-right"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        0
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
      </DropDown>
    </div>
  </div>
  <Loading />
</div>
`;

exports[`ReportBrowser3 renders a message when there are no audit cycles 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <div
      className="btn-group pull-right"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        0
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
      </DropDown>
    </div>
  </div>
  <Jumbotron
    align="center"
    heading="there are no reports here"
    para="yet"
  />
</div>
`;

exports[`ReportBrowser3 renders the audit store table with correct props 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(ReportAttributeFilter)
      reportAttribute={
        Object {
          "attribute_data": Object {
            "options": Array [
              Object {
                "option_id": "option1",
                "option_label": "Option Label 1",
              },
              Object {
                "option_id": "option2",
                "option_label": "Option Label 2",
              },
            ],
            "version": 1,
          },
          "id": 1,
          "json_id": "attribute1",
          "label": "Label One",
        }
      }
    />
    <Connect(ReportAttributeFilter)
      reportAttribute={
        Object {
          "attribute_data": Object {
            "options": Array [
              Object {
                "option_id": "option1",
                "option_label": "Option Label 1",
              },
              Object {
                "option_id": "option2",
                "option_label": "Option Label 2",
              },
            ],
            "version": 1,
          },
          "id": 2,
          "json_id": "attribute2",
          "label": "Label Two",
        }
      }
    />
    <div
      className="btn-group pull-right"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        2
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
      </DropDown>
    </div>
  </div>
  <Connect(AuditStoreTable) />
</div>
`;
